tests/snapshots/render_snapshots__result_pane__result_pane_cell_edit_cursor_at_middle.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││Owner:   postgres                                         │
│  public.comments ││Comment: User accounts                                    │
│                  ││Rows:    ~100                                             │
│                  ││Schema:  public                                           │
│                  ││Table:   users                                            │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  │└──────────────────────────────────────────────────────────┘
│                  │┌ [3] Result (2 rows, 15ms) ───────────────────────────────┐
│                  ││id   name    email                                        │
│                  ││1    Alice   alice@example.com                            │
│                  ││2    Bob     bob@example.com                              │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
:w:Write  type:Edit  ←→:Move  ?:Help  Esc:Normal  q:Quit
